--- a/AmigoDono.Web/Web.config
+++ b/AmigoDono.Web/Web.config
@@ -4,9 +4,10 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
-  <configSections>    
+  <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -17,7 +18,7 @@
   <connectionStrings>
     <add name="Amigos_do_DonoEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAFA-NOTE\RAFAELD;initial catalog=Amigos_do_Dono;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--<add name="Amigos_do_DonoEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAFA-PC\RAFAEL;initial catalog=Amigos_do_Dono;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-</connectionStrings>
+  </connectionStrings>
   <system.web>
     <sessionState mode="InProc" timeout="25"></sessionState>
     <authentication mode="Forms">
@@ -34,17 +35,24 @@
     </httpModules>
   </system.web>
 
-  
+
   <!-- NECESSÁRIO POIS SENÃO NÃO ACIONA OS MÉTODOS DA PÁGINA DE LOGIN />-->
-  <location path="FEEDBACK">
+  <location path="Login">
     <system.web>
       <authorization>
-        <deny users="?"/>
+        <allow users="*"/>
       </authorization>
     </system.web>
   </location>
-  
-  
+
+  <location path="Home">
+    <system.web>
+      <authorization>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
