--- a/AmigoDono.Web/Web.config
+++ b/AmigoDono.Web/Web.config
@@ -6,7 +6,8 @@
 <configuration>
   <configSections>    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -17,15 +18,7 @@
   <connectionStrings>
     <!--<add name="Amigos_do_DonoEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAFA-NOTE\RAFAELD;initial catalog=Amigos_do_Dono;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <add name="Amigos_do_DonoEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAFA-PC\RAFAEL;initial catalog=Amigos_do_Dono;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-<<<<<<< HEAD
-<<<<<<< HEAD
   </connectionStrings>
-=======
-</connectionStrings>
->>>>>>> 0092ade6997ef6d86821101bc01ba96f946c6782
-=======
-</connectionStrings>
->>>>>>> ad345cbe749a1f4e57b53cb92eb864a2b16ceee3
   <system.web>
     <sessionState mode="InProc" timeout="25"></sessionState>
     <authentication mode="Forms">
