--- a/AmigoDono.Web/Web.config
+++ b/AmigoDono.Web/Web.config
@@ -15,13 +15,13 @@
     <add key="owin:AutomaticAppStartup" value="false" />
   </appSettings>
   <connectionStrings>
-    <!--<add name="Amigos_do_DonoEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAFA-NOTE\RAFAELD;initial catalog=Amigos_do_Dono;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="Amigos_do_DonoEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAFA-PC\RAFAEL;initial catalog=Amigos_do_Dono;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Amigos_do_DonoEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAFA-NOTE\RAFAELD;initial catalog=Amigos_do_Dono;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="Amigos_do_DonoEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAFA-PC\RAFAEL;initial catalog=Amigos_do_Dono;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <system.web>
     <sessionState mode="InProc" timeout="25"></sessionState>
     <authentication mode="Forms">
-      <forms name=".AuthCookie" slidingExpiration="false" loginUrl="~/Login/Signin/"></forms>
+      <forms name=".AuthCookie" slidingExpiration="false" loginUrl="Login/Signin/"></forms>
     </authentication>
     <authorization>
       <allow users="*"/>
@@ -36,10 +36,42 @@
 
   
   <!-- NECESSÁRIO POIS SENÃO NÃO ACIONA OS MÉTODOS DA PÁGINA DE LOGIN />-->
-  <location path="FEEDBACK">
+  <location path="Login">
+    <system.web>
+      <authorization>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+  
+   <location path="DENUNCIA">
+    <system.web>
+      <authorization>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+  
+   <location path="DADOS">
     <system.web>
       <authorization>
         <deny users="?"/>
+      </authorization>
+    </system.web>
+  </location>
+  
+   <location path="FEEDBACK">
+    <system.web>
+      <authorization>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+  
+  <location path="Home">
+    <system.web>
+      <authorization>
+        <allow users="*"/>
       </authorization>
     </system.web>
   </location>
