--- a/AmigoDono.Web/bin/AmigoDono.Web.dll.config
+++ b/AmigoDono.Web/bin/AmigoDono.Web.dll.config
@@ -33,11 +33,27 @@
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
-  </system.web>
 
+  </system.web>
   
   <!-- NECESSÁRIO POIS SENÃO NÃO ACIONA OS MÉTODOS DA PÁGINA DE LOGIN />-->
-  <location path="FEEDBACK">
+  <location path="Login">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
+
+  <location path="Home">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
+  
+  <location path="DADOS">
     <system.web>
       <authorization>
         <deny users="?" />
