--- a/AmigoDono.Web/AmigoDono.Web.csproj
+++ b/AmigoDono.Web/AmigoDono.Web.csproj
@@ -227,10 +227,10 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\APOIADORESController.cs" />
     <Compile Include="Controllers\DADOSController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\PATROCINADORESController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -242,12 +242,6 @@
     <Compile Include="Controllers\FEEDBACKController.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\bootstrap-grid.css" />
-    <Content Include="Content\bootstrap-grid.min.css" />
-    <Content Include="Content\bootstrap-reboot.css" />
-    <Content Include="Content\bootstrap-reboot.min.css" />
-    <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\css\bootstrap-grid.css" />
     <Content Include="Content\css\bootstrap-grid.min.css" />
     <Content Include="Content\css\bootstrap-reboot.css" />
@@ -261,28 +255,11 @@
     <Content Include="Content\css\fom-validation.css" />
     <Content Include="Content\css\pets.css" />
     <Content Include="Content\css\signin.css" />
-    <Content Include="Content\imagens\1920x1080.jpg" />
-    <Content Include="Content\imagens\A-mercenary-on-the-rise-en.jpg" />
-    <Content Include="Content\imagens\Batatinha.png" />
-    <Content Include="Content\imagens\cachorro.jpg" />
-    <Content Include="Content\imagens\capturar.png" />
-    <Content Include="Content\imagens\Cash.png" />
+    <Content Include="Content\imagens\Foto em branco.jpg" />
     <Content Include="Content\imagens\foto1.jpg" />
     <Content Include="Content\imagens\foto2.jpg" />
-    <Content Include="Content\imagens\Geralt_sword-size_1920x1080.png" />
-    <Content Include="Content\imagens\Hermes.png" />
-    <Content Include="Content\imagens\Juice.png" />
-    <Content Include="Content\imagens\Kito.png" />
     <Content Include="Content\imagens\Logo.png" />
     <Content Include="Content\imagens\Logo2.png" />
-    <Content Include="Content\imagens\Sasha.png" />
-    <Content Include="Content\imagens\Icone.ico" />
-    <Content Include="Content\imagens\Snow.png" />
-    <Content Include="Content\imagens\Van Gogh.png" />
-    <Content Include="Content\imagens\Vidinha.png" />
-    <Content Include="Content\imagens\Vivi.png" />
-    <Content Include="Content\imagens\Will.png" />
-    <Content Include="Content\imagens\Wolf.png" />
     <Content Include="Content\css\jquery-ui.css" />
     <Content Include="Content\css\jquery-ui.structure.css" />
     <Content Include="Content\css\jquery-ui.theme.css" />
@@ -292,9 +269,6 @@
     <Content Include="Content\images\ui-icons_777777_256x240.png" />
     <Content Include="Content\images\ui-icons_cc0000_256x240.png" />
     <Content Include="Content\images\ui-icons_ffffff_256x240.png" />
-    <Content Include="Content\jquery-ui.css" />
-    <Content Include="Content\jquery-ui.structure.css" />
-    <Content Include="Content\jquery-ui.theme.css" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
     <Content Include="Content\themes\base\autocomplete.css" />
@@ -416,12 +390,6 @@
     <Content Include="Scripts\bootstrap.js.map" />
     <Content Include="Scripts\bootstrap.bundle.min.js.map" />
     <Content Include="Scripts\bootstrap.bundle.js.map" />
-    <Content Include="Content\bootstrap.min.css.map" />
-    <Content Include="Content\bootstrap.css.map" />
-    <Content Include="Content\bootstrap-reboot.min.css.map" />
-    <Content Include="Content\bootstrap-reboot.css.map" />
-    <Content Include="Content\bootstrap-grid.min.css.map" />
-    <Content Include="Content\bootstrap-grid.css.map" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -469,7 +437,6 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\APOIADORES\Apoiadores.cshtml" />
     <Content Include="Scripts\umd\popper.min.js.map" />
     <Content Include="Scripts\umd\popper.js.map" />
     <Content Include="Scripts\umd\popper-utils.min.js.map" />
@@ -480,6 +447,7 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\DADOS\Detalhes.cshtml" />
+    <Content Include="Views\PATROCINADORES\Patrocinadores.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
